<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_add_new_content"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/activity_main_menu_items_add_new_content"
        android:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/activity_main_menu_items_search_item_title"
        android:actionLayout="@layout/search_layout"
        android:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/menu_item_disable_position"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/activity_main_menu_items_save_position_title"
        android:showAsAction="ifRoom"/>

</menu>